# minecraft-protocol-rs

./: Cargo.toml
derive_codec/: Cargo.toml
derive_codec/src/: lib.rs
src/: decoder.rs  encoder.rs  lib.rs  packet.rs  protocol.rs  types.rs
src/codec/: decoder.rs  encoder.rs  mod.rs
